add rest api for timetable and leave requests
