# src/gen/swagger/com/sonicle/webtop/drm/swagger/v2/api/ManagersApi.java
@@ -1,6 +1,7 @@
 package com.sonicle.webtop.drm.swagger.v2.api;
 
-import com.sonicle.webtop.drm.swagger.v2.model.ApiTimetableEntriesResult;
+import com.sonicle.webtop.drm.swagger.v2.model.ApiManagersResult;
+import com.sonicle.webtop.drm.swagger.v2.model.ApiUsersResult;
 
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
@@ -13,32 +14,15 @@ import java.util.List;
 import javax.validation.constraints.*;
 import javax.validation.Valid;
 
-@Path("/timetable")
-@Api(description = "the timetable API")
+@Path("/managers")
+@Api(description = "the managers API")
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2026-02-23T11:21:10.810+01:00[Europe/Rome]")
-public abstract class TimetableApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
+public abstract class ManagersApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
 
     @GET
+    @Path("/users")
     @Produces({ "application/json" })
-    @ApiOperation(value = "List Timetable Entries", notes = "List timetable entries for a specific month / year", response = ApiTimetableEntriesResult.class, authorizations = {
-        
-        @Authorization(value = "auth-bearer"),
-        
-        @Authorization(value = "auth-apikey-username"),
-        
-        @Authorization(value = "auth-apikey-bearer"),
-        
-        @Authorization(value = "auth-basic")
-         }, tags={ "me" })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = ApiTimetableEntriesResult.class)
-    })
-    public Response listTimetableEntries(@QueryParam("operatorId")  @ApiParam("Effective user")  String operatorId,@QueryParam("year")   Integer year,@QueryParam("month")   Integer month) {
-        return Response.ok().entity("magic!").build();
-    }
-
-    @POST
-    @ApiOperation(value = "Punch", notes = "Register a Punch (Clock-in / Clock-out automatic)", response = Void.class, authorizations = {
+    @ApiOperation(value = "List managed Users by a Manager", notes = "List managed Users by a Manager", response = ApiUsersResult.class, authorizations = {
         
         @Authorization(value = "auth-bearer"),
         
@@ -49,9 +33,28 @@ public abstract class TimetableApi extends com.sonicle.webtop.core.sdk.BaseRestA
         @Authorization(value = "auth-basic")
          }, tags={  })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = Void.class)
+        @ApiResponse(code = 200, message = "OK", response = ApiUsersResult.class)
     })
-    public Response punch(@QueryParam("type")  @ApiParam("M &#x3D; Manual , S &#x3D; Special")  String type,@QueryParam("location")  @ApiParam("O &#x3D; Office, S &#x3D; Smart, A &#x3D; App")  String location) {
+    public Response listManagedUsers() {
+        return Response.ok().entity("magic!").build();
+    }
+
+    @GET
+    @Produces({ "application/json" })
+    @ApiOperation(value = "List Managers", notes = "List Managers of a specific user", response = ApiManagersResult.class, authorizations = {
+        
+        @Authorization(value = "auth-bearer"),
+        
+        @Authorization(value = "auth-apikey-username"),
+        
+        @Authorization(value = "auth-apikey-bearer"),
+        
+        @Authorization(value = "auth-basic")
+         }, tags={  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "OK", response = ApiManagersResult.class)
+    })
+    public Response listManagers(@QueryParam("userId")   String userId) {
         return Response.ok().entity("magic!").build();
     }
 }
