# src/gen/swagger/com/sonicle/webtop/drm/swagger/v2/model/ApiUser.java
@@ -13,53 +13,50 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 
-/**
- * This general detailed error structure is used throughout this API.
- **/
-@ApiModel(description = "This general detailed error structure is used throughout this API.")
-@JsonTypeName("ApiError")
+
+
+@JsonTypeName("User")
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2026-02-23T11:21:10.810+01:00[Europe/Rome]")
-public class ApiApiError   {
-  private @Valid Integer code;
-  private @Valid String description;
+public class ApiUser   {
+  private @Valid String id;
+  private @Valid String displayname;
 
   /**
    **/
-  public ApiApiError code(Integer code) {
-    this.code = code;
-    return this;
-  }
-
-  
-  @ApiModelProperty(required = true, value = "")
-  @JsonProperty("code")
-  @NotNull
-  public Integer getCode() {
-    return code;
-  }
-
-  @JsonProperty("code")
-  public void setCode(Integer code) {
-    this.code = code;
-  }
-
-  /**
-   **/
-  public ApiApiError description(String description) {
-    this.description = description;
+  public ApiUser id(String id) {
+    this.id = id;
     return this;
   }
 
   
   @ApiModelProperty(value = "")
-  @JsonProperty("description")
-  public String getDescription() {
-    return description;
+  @JsonProperty("id")
+  public String getId() {
+    return id;
   }
 
-  @JsonProperty("description")
-  public void setDescription(String description) {
-    this.description = description;
+  @JsonProperty("id")
+  public void setId(String id) {
+    this.id = id;
+  }
+
+  /**
+   **/
+  public ApiUser displayname(String displayname) {
+    this.displayname = displayname;
+    return this;
+  }
+
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("displayname")
+  public String getDisplayname() {
+    return displayname;
+  }
+
+  @JsonProperty("displayname")
+  public void setDisplayname(String displayname) {
+    this.displayname = displayname;
   }
 
 
@@ -71,23 +68,23 @@ public class ApiApiError   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    ApiApiError apiError = (ApiApiError) o;
-    return Objects.equals(this.code, apiError.code) &&
-        Objects.equals(this.description, apiError.description);
+    ApiUser user = (ApiUser) o;
+    return Objects.equals(this.id, user.id) &&
+        Objects.equals(this.displayname, user.displayname);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(code, description);
+    return Objects.hash(id, displayname);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class ApiApiError {\n");
+    sb.append("class ApiUser {\n");
     
-    sb.append("    code: ").append(toIndentedString(code)).append("\n");
-    sb.append("    description: ").append(toIndentedString(description)).append("\n");
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    displayname: ").append(toIndentedString(displayname)).append("\n");
     sb.append("}");
     return sb.toString();
   }
