# src/main/java/com/sonicle/webtop/drm/rest/v2/Companies.java
@@ -1,0 +1,101 @@
+/*
+ * Copyright (C) 2017 Sonicle S.r.l.
+ *
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU Affero General Public License version 3 as published by
+ * the Free Software Foundation with the addition of the following permission
+ * added to Section 15 as permitted in Section 7(a): FOR ANY PART OF THE COVERED
+ * WORK IN WHICH THE COPYRIGHT IS OWNED BY SONICLE, SONICLE DISCLAIMS THE
+ * WARRANTY OF NON INFRINGEMENT OF THIRD PARTY RIGHTS.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more
+ * details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program; if not, see http://www.gnu.org/licenses or write to
+ * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+ * MA 02110-1301 USA.
+ *
+ * You can contact Sonicle S.r.l. at email address sonicle[at]sonicle[dot]com
+ *
+ * The interactive user interfaces in modified source and object code versions
+ * of this program must display Appropriate Legal Notices, as required under
+ * Section 5 of the GNU Affero General Public License version 3.
+ *
+ * In accordance with Section 7(b) of the GNU Affero General Public License
+ * version 3, these Appropriate Legal Notices must retain the display of the
+ * Sonicle logo and Sonicle copyright notice. If the display of the logo is not
+ * reasonably feasible for technical reasons, the Appropriate Legal Notices must
+ * display the words "Copyright (C) 2017 Sonicle S.r.l.".
+ */
+package com.sonicle.webtop.drm.rest.v2;
+
+import com.sonicle.webtop.core.app.RunContext;
+import com.sonicle.webtop.core.app.WT;
+import com.sonicle.webtop.core.sdk.UserProfileId;
+import com.sonicle.webtop.core.sdk.WTException;
+import com.sonicle.webtop.drm.DrmManager;
+import com.sonicle.webtop.drm.bol.OCompany;
+import com.sonicle.webtop.drm.swagger.v2.api.CompaniesApi;
+import com.sonicle.webtop.drm.swagger.v2.model.ApiApiError;
+import com.sonicle.webtop.drm.swagger.v2.model.ApiCompany;
+import com.sonicle.webtop.drm.swagger.v2.model.ApiCompaniesResult;
+import java.util.ArrayList;
+import java.util.List;
+import javax.ws.rs.core.Response;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+/**
+ *
+ * @author gabriele.bulfon
+ */
+public class Companies extends CompaniesApi {
+	
+	private static final Logger logger = LoggerFactory.getLogger(Companies.class);
+
+	@Override
+	public Response listCompanies(String userId) {
+		UserProfileId currentProfileId = RunContext.getRunProfileId();
+		if (userId == null) userId = currentProfileId.getUserId();
+		DrmManager manager = getManager();
+		try {
+			List<OCompany> list = manager.listCompaniesByDomainUser(); 
+			ApiCompaniesResult acr = new ApiCompaniesResult();
+			ArrayList<ApiCompany> items = new ArrayList<>();
+			for (OCompany oc: list) {
+				ApiCompany c = new ApiCompany();
+				c.setId(oc.getCompanyId().toString());
+				c.setDisplayname(oc.getName());
+				items.add(c);
+			}
+			acr.setItems(items);
+			return respOk(acr);
+		} catch(WTException exc) {
+			logger.error("[{}] getCompanies({})", currentProfileId, userId, exc);
+			return respError(exc);
+		}
+	}
+	
+	
+
+	@Override
+	protected Object createErrorEntity(Response.Status status, String message) {
+		return new ApiApiError()
+				.code(status.getStatusCode())
+				.description(message);
+	}
+	
+	private DrmManager getManager() {
+		return getManager(RunContext.getRunProfileId());
+	}
+	
+	private DrmManager getManager(UserProfileId targetProfileId) {
+		return (DrmManager)WT.getServiceManager(SERVICE_ID, targetProfileId);
+	}
+	
+	
+
+}
